fix: Move overflow-x to main to prevent setting block context
With overflow-x on the body, position: sticky no longer functions on the header

--- a/app/frontend/scss/elements/_detail.scss
+++ b/app/frontend/scss/elements/_detail.scss
@@ -12,6 +12,7 @@ $gap: #{calc(map.get($breakpoints, max) / 16)};
   grid-template-columns: 1fr 300px 1fr;
   gap: 0 $gap;
   align-items: flex-start;
+  @include max_width;
 }
 
 .detail__header {
