--- a/app/frontend/scss/general/_general.scss
+++ b/app/frontend/scss/general/_general.scss
@@ -35,11 +35,10 @@ body {
   font-family: $font-stack;
   font-size: $font-size-base;
   line-height: 1.5;
-  overflow-x: hidden;
 }
 
 main {
-  @include max_width;
+  overflow-x: hidden;
 }
 
 a {
